punctuation spacing fix

--- a/client/src/WordBox.css
+++ b/client/src/WordBox.css
@@ -94,6 +94,15 @@ g-b {
   width: 100%;
 }
 
+.punct {
+    margin-left: -6px;
+}
+
+.dash {
+    margin-left: -6px;
+    margin-right: -6px;
+}
+
 @media all and (max-width: 500px) {
   input {
     font-family: monospace;
@@ -115,7 +124,7 @@ g-b {
     user-select: none;
     font-weight: bold;
     top: 5px;
-    right: -3px;
+    left: 0px;
     margin: 0px;
   }
   
@@ -143,9 +152,9 @@ g-b {
     border: 2px solid red;
     border-radius: 4px;
     outline-color: red;
-    width: 110%;
-    margin-left: 3px;
-    margin-right: 3px;
+    width: 90%;
+    margin-left: 0px;
+    margin-right: 6px;
     margin-bottom: 5px;
     z-index: 2;
     background-color: transparent;
@@ -153,8 +162,8 @@ g-b {
 
   .no-outline {
     width: 110%;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 2px;
+    margin-right: 8px;
     margin-bottom: 5px;
     z-index: 2;
     background-color: transparent;
